infrastructure/base/controllers/istio-system/base.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
