infrastructure/base/controllers/istio-system/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: fin-gw-http
  namespace: istio-system
  labels:
    istio: fin-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "${DOMAIN}"
        - "*.${DOMAIN}"
        - "${VAULT_HOST}"
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: fin-gw
  namespace: istio-system
  labels:
    istio: fin-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: fin-tls
      hosts:
        - "${DOMAIN}"
        - "*.${DOMAIN}"
    - port:
        number: 443
        name: https-vault
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: vault-tls
      hosts:
        - "${VAULT_HOST}"
